--- a/Allias/View/Base.lproj/Main.storyboard
+++ b/Allias/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Tst-v0-6hu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oDy-Ki-HtS">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -17,13 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="STS-Lg-Q5T">
-                                <rect key="frame" x="11" y="59" width="392" height="798"/>
+                                <rect key="frame" x="11" y="103" width="392" height="754"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yio-GC-YFh">
-                                        <rect key="frame" x="0.0" y="0.0" width="392" height="587"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="392" height="543"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logotip" translatesAutoresizingMaskIntoConstraints="NO" id="N9p-Be-Uol">
-                                                <rect key="frame" x="-20" y="-8" width="432" height="603"/>
+                                                <rect key="frame" x="-20" y="-8" width="432" height="559"/>
                                             </imageView>
                                         </subviews>
                                         <constraints>
@@ -34,7 +34,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="wtU-Hy-SvC" userLabel="ButtonStack ">
-                                        <rect key="frame" x="0.0" y="587" width="392" height="211"/>
+                                        <rect key="frame" x="0.0" y="543" width="392" height="211"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kdr-Ks-3Mn">
                                                 <rect key="frame" x="0.0" y="0.0" width="392" height="67"/>
@@ -126,7 +126,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="792.75362318840587" y="-171.42857142857142"/>
+            <point key="canvasLocation" x="1702.8985507246377" y="-171.42857142857142"/>
         </scene>
         <!--Game Info View Controller-->
         <scene sceneID="yZH-eH-CN7">
@@ -137,7 +137,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TEAMS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7K-cC-u1d">
-                                <rect key="frame" x="82" y="62" width="250" height="70"/>
+                                <rect key="frame" x="82" y="106" width="250" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="kbe-KR-Hof"/>
                                     <constraint firstAttribute="width" constant="250" id="r4S-1W-T1f"/>
@@ -147,7 +147,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oJy-JT-IAd">
-                                <rect key="frame" x="17" y="80" width="30" height="34"/>
+                                <rect key="frame" x="17" y="124" width="30" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="uhD-Ub-3JC"/>
                                     <constraint firstAttribute="height" constant="34" id="yUp-HN-TNf"/>
@@ -158,11 +158,10 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="previousPageButtonPressed:" destination="Tst-v0-6hu" eventType="touchUpInside" id="aDj-QP-oMz"/>
-                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="GoBackToMain" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="FXh-Zd-cnN"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fKR-Fa-BJA">
-                                <rect key="frame" x="37" y="167" width="340" height="350"/>
+                                <rect key="frame" x="37" y="211" width="340" height="350"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="340" id="24l-NK-1ru"/>
@@ -238,7 +237,6 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="playButtonPressed:" destination="Tst-v0-6hu" eventType="touchUpInside" id="g6l-tG-dnN"/>
-                                    <segue destination="z6f-Js-nz4" kind="presentation" identifier="PlayGame" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="fAZ-WZ-GxQ"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Who will be the next" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2IT-2J-vj7">
@@ -284,7 +282,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dXo-Ru-A9T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1711.5942028985507" y="143.30357142857142"/>
+            <point key="canvasLocation" x="2621.739130434783" y="143.30357142857142"/>
         </scene>
         <!--Option View Controller-->
         <scene sceneID="OuS-xQ-lun">
@@ -316,7 +314,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FSL-oV-iby" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1713.0434782608697" y="-617.41071428571422"/>
+            <point key="canvasLocation" x="2623.1884057971015" y="-617.41071428571422"/>
         </scene>
         <!--Dictionary View Controller-->
         <scene sceneID="v4c-CU-IxU">
@@ -348,7 +346,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ma8-Rk-h9O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2844.9275362318845" y="-617.41071428571422"/>
+            <point key="canvasLocation" x="3755.0724637681164" y="-617.41071428571422"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="kXo-Ej-Z9U">
@@ -380,7 +378,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aQ7-hW-Ohi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2844.9275362318845" y="143.97321428571428"/>
+            <point key="canvasLocation" x="3755.0724637681164" y="143.97321428571428"/>
         </scene>
         <!--Rulls View Controller-->
         <scene sceneID="r7m-8i-6i4">
@@ -391,10 +389,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aUv-xa-GFQ">
-                                <rect key="frame" x="20" y="64" width="374" height="1098"/>
+                                <rect key="frame" x="20" y="108" width="374" height="1054"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="BNH-vZ-UDz">
-                                        <rect key="frame" x="0.0" y="0.0" width="366" height="1090"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="366" height="1046"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <string key="text">СКАЖИ ИНАЧЕ - игра разъяснения слов, в которой принимают участие команды, состоящие из двух человек. Минимальное количество игроков 4 человека, максимальному предела нет.
 
@@ -460,27 +458,24 @@
             <point key="canvasLocation" x="-801.44927536231887" y="407.8125"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="CTw-jb-bOH">
+        <scene sceneID="Kue-Mq-aRb">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7f3-U0-Kv5" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oDy-Ki-HtS" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Stz-yf-YAm">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5oT-UE-JJZ">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="TyD-QH-oc5"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="IqS-un-FeA"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="en1-Zg-gN1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YHY-5R-jo1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-117.39130434782609" y="-171.42857142857142"/>
+            <point key="canvasLocation" x="792.75362318840587" y="-171.42857142857142"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="FXh-Zd-cnN"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <image name="BackBotton" width="170.5" height="170.5"/>
         <image name="logotip" width="682.5" height="682.5"/>
